# openjobseu

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  all_functions.txt  app.py  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/: dependabot.yml
app/: __init__.py  audit_filter_registry.py  internal.py  local_tick_helper.py  logging.py  main.py
audit_tool/: offer_audit_panel.css  offer_audit_panel.html  offer_audit_panel.js
docs/: ARCHITECTURE.md  AUDIT_BASTION.md  CANONICAL_MODEL.md  COMPLIANCE.md  DATA_SOURCES.md  DB_MIGRATION_NEON_TO_AIVEN.md  JOB_LIFECYCLE.md  LOOKER_STUDIO_AUDIT_DASHBOARD.md  PAID_API.md  ROADMAP.md  SYSTEM_MAP.md
frontend/: feed.js  feed.json  index.htm  index.html  main.spec.ts  mock-feed.json  package.json  playwright.config.ts  style.css
ingestion/: run_example.py  test_example_source.py
scripts/: arbeitnow_audit.py  audit_html_leftovers.py  backfill_clean_descriptions.py  backfill_db_with_compilance_result.py  bastion.sh  benchmark_cleaning.py  check_no_prints.py  db_smoke_check.py  description_sanity.py  eu_scope_audit.py  filter_pg_restore_list.py  jobicy_audit.py  migrate_jobs_to_companies.py  migrate_weworkremotely_ids.py  post_deploy_smoke_check.py  preview_job.py  publish_frontend_assets.py  pytest_precommit_guard.py  raw_source_view.py  recalculate_fingerprints.py  remoteok_geo_audit.py  remoteok_purity_audit.py  shadow_employer_compliance.py  (+7 more)
(+367 files in other folders)
